--- a/course_website/pdfs/desktop.ini
+++ b/course_website/pdfs/desktop.ini
@@ -1,3 +1,5 @@
 [LocalizedFileNames]
 ReLax_query_examples_inclass_week2.txt=@ReLax_query_examples_inclass_week2,0
 univdb-sqlite.db=@univdb-sqlite,0
+univdb-sqlite-1.db=@univdb-sqlite-1,0
+ships.db=@ships,0
